--- a/web/static/css/edit.css
+++ b/web/static/css/edit.css
@@ -1,7 +1,7 @@
 input, textarea {
     border: 0;
     border-bottom: 1px solid lightgray;
-    width: 100%;
+    width: 90%;
     margin: 9px 5px 1px 5px;
     font-size: 100%;
 }
@@ -12,16 +12,26 @@ input:focus, textarea:focus {
     margin-bottom: 0 !important; 
 }
 
-.details-full {
-    margin: 10px 0;
+.details ul {
+    list-style-type: none;
 }
 
-.details-full input, .details-full textarea {
+.details li {
+    height: 33px;    
+}
+
+.edit-block {
     width: 100%;
+    margin: 20px 10px;
 }
 
-.details-container div {
-    margin-top: 40px;
+.edit-remove-li, .edit-add-li {
+    background-color: transparent;
+    border: 0;
+    font-size: 100%;
+    height: 25px;
+    width: 25px;
+    margin: 10px;
 }
 
 #edit-overview textarea {
