--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -63,5 +63,10 @@
 {% block content %}
 {% endblock %}
 
+
+<section class="footer">
+    <div class="footer-placeholder">Footer</div>
+</section>
+
 </body>
 </html>
