--- a/web/templates/equipment.html
+++ b/web/templates/equipment.html
@@ -56,6 +56,10 @@
         {% endif %}
 
         <div>
+            <strong>Campus: </strong>{{ campus }}
+        </div>
+
+        <div>
             <strong>Contact:</strong>
             <ul style="list-style-type: none;">
                 <li><a href="{{ equipment['contact']['email_link'] }}">{{ equipment['contact']['name'] }}</a></li>
