--- a/web/static/css/edit.css
+++ b/web/static/css/edit.css
@@ -1,4 +1,4 @@
-input, textarea {
+input, textarea, select{
     border: 0;
     border-bottom: 1px solid lightgray;
     width: 90%;
@@ -6,7 +6,7 @@ input, textarea {
     font-size: 100%;
 }
 
-input:focus, textarea:focus {
+input:focus, textarea:focus, select:focus {
     border-bottom: 2px solid black;
     outline-width: 0;
     margin-bottom: 0 !important; 
@@ -28,7 +28,7 @@ input:focus, textarea:focus {
 .edit-remove-li, .edit-add-li {
     background-color: transparent;
     border: 0;
-    font-size: 100%;
+    font-size: 120%;
     height: 25px;
     width: 25px;
     margin: 10px;
@@ -51,6 +51,39 @@ input:focus, textarea:focus {
 
 #edit-contact input {
     width: calc(100% - 61px);
+}
+
+#edit-category select {
+    width: 25%;
+    background-color: transparent;
+    border-radius: 0;
+    -webkit-appearance: none;
+    appearance: none;
+    -webkit-border-radius: 0px;
+
+}
+
+#edit-location {
+    display: flex;
+    align-items: center;
+}
+
+#edit-location-input {
+    width: 33%;
+    margin: 0 10px 1px 10px;
+}
+
+#edit-location-api {
+    width: 400px;
+    height: 200px;
+    border: 0; 
+    margin: 10px;
+}
+
+#edit-submit {
+    width: 110px;
+    height: 40px;
+    margin-left: calc(50% - 55px);
 }
 
 
