--- a/web/static/css/footer.css
+++ b/web/static/css/footer.css
@@ -5,6 +5,7 @@
     width: 100%;
     border-top: 1px solid gray;
     border-bottom: 1px solid gray;
+    background-color: #E8E8E8;
 }
 
 .footer-placeholder {
