--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -78,35 +78,34 @@
         </ul>
     </div>
 
-    <div class="edit-block">
-        <strong>Category: </strong>{{ cat }}
+    <div class="edit-block" id="edit-category">
+        <strong>Category: </strong>
+        <select name="cat" class="edit-cat-select" id="edit-cat" data-selected={{ existing_cat[0] }}>
+            <option value="Material">Material</option>
+            <option value="Characterization">Characterization</option>
+            <option value="Manufacturing">Manufacturing</option>
+        </select>
+        -
+        <select name="bucket" class="edit-cat-select" id="edit-bucket" data-selected={{ existing_cat[1] }}></select>
+        -
+        <select name="item" class="edit-cat-select" id="edit-item" data-selected={{ existing_cat[2] }}></select>
     </div>
 
-    <div class="edit-block">Fee: {{ equipment['fee'] }}</div>
+    <div class="edit-block"><strong>Fee: </strong><input type="text" name="fee" value="{{ equipment['fee'] }}"/></div>
 
 
-
-
-
-    <div class="details-container">
-
-        {% if equipment['images'] %}
-        <div class="details-img">
-            <img src="{{ equipment['images'][0]['link'] }}"
-                alt="{{ equipment['images'][0]['description'] }}">
-        </div>
-        {% endif %}
-
-        <!-- <div>
-            <iframe
-                width="400"
-                height="300"
-                style="border:0"
-                src="https://www.google.com/maps/embed/v1/place?key={{GOOGLE_MAP_API_KEY}}&q=pnf+uchicago">
-            </iframe>
-        </div> -->
-
+    <!-- <div class="edit-block"><strong>Link to Image: </strong><input type="text" name="img-link" value=""/></div> -->
+    <div class="edit-block" id="edit-location">
+        <strong>Location: </strong>
+        <input type="text" id="edit-location-input" name="location" value="{{ equipment['location'] }}"/>
+        <iframe
+            id="edit-location-api"
+            src="https://www.google.com/maps/embed/v1/place?key={{GOOGLE_MAP_API_KEY}}&q=pnf+uchicago">
+        </iframe>
     </div>
+
+    <div class="edit-block"><button id="edit-submit" type="submit">Save Changes</button></div>
+    
    
 </form>
 
