--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -38,10 +38,13 @@
             <strong>Todo: </strong>
             <ul>
                 <li>User registration (~5 hrs)</li>
-                <li>Finish editing function (map and image) (~10 hrs)</li>
-                <li>Adds custom support for category (~10 hrs)</li>
+                <li>Finish editing function (map and image) (~5 hrs)</li>
+                <li>Adds custom support for category (~5 hrs)</li>
+                <li>UI details: colors, terms of use, help page... (~5 hrs)</li>
+                <li>Mobile UI (~10 hrs)</li>
                 <li>Add feedback options (? hrs)</li>
-                <li>Refractor code, write documentations (~20 hrs)</li>
+                <li>Refractor code base on Google's coding standard (~ 5hrs)</li>
+                <li>Write documentations (~5 hrs)</li>
                 <li>...</li>
             </ul>
         </div>
