--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-<form class="details">
+<form class="details" id="edit-form">
 
     <div id="backButton">
         <a href="javascript:history.back()">
