spinned off utils and edit blueprint

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -40,7 +40,7 @@
                 <li>User registration (~5 hrs)</li>
                 <li>Finish editing function (map and image) (~5 hrs)</li>
                 <li>Adds custom support for category (~5 hrs)</li>
-                <li>UI details: colors, terms of use, help page... (~5 hrs)</li>
+                <li>UI details: colors, terms of use, help page... (make theme consistent with PME) (~5 hrs)</li>
                 <li>Mobile UI (~10 hrs)</li>
                 <li>Add feedback options (? hrs)</li>
                 <li>Refractor code base on Google's coding standard (~ 5hrs)</li>
