--- a/web/templates/equipment.html
+++ b/web/templates/equipment.html
@@ -98,7 +98,7 @@
                 width="400"
                 height="300"
                 style="border:0"
-                src="https://www.google.com/maps/embed/v1/place?key={{GOOGLE_MAP_API_KEY}}&q=pnf+uchicago">
+                src="https://www.google.com/maps/embed/v1/place?key={{GOOGLE_MAP_API_KEY}}&q={{ gmap_query }}">
             </iframe>
         </div>
 
