--- a/web/static/css/edit.css
+++ b/web/static/css/edit.css
@@ -40,6 +40,32 @@ input:focus, textarea:focus, select:focus {
     resize: vertical;
 }
 
+
+#edit-images div {display: flex;}
+.edit-images-item {
+    margin: 10px; 
+    min-height: 200px;
+    position: relative;
+}
+.edit-images-item div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: whitesmoke;
+    font-size: 20px;
+    opacity: 0;
+}
+.edit-images-item div img{
+    height: 80px;
+    width: 80px;
+    margin: auto;
+    opacity: 0.5;
+    z-index: 10;
+}
+.edit-images-item div:hover{opacity: 0.7;}
+
+
+
 #edit-contact li {
     display: flex;
 }
