--- a/web/static/css/details.css
+++ b/web/static/css/details.css
@@ -1,15 +1,36 @@
 /* details.css: for equipment.html and user.html */
 
+
+
 .details {
     display: flex;
     width: 100%;
-    max-width: 900px;
+    max-width: 1100px;
     min-height: 800px;
     margin: auto;
     padding: 20px;
     flex-wrap: wrap;
     align-items: flex-start;
     align-content: flex-start;
+    line-height: 1.5em;
+}
+
+.details h1 {
+    font-size: 2.2em;
+    font-weight: normal;
+    margin: 50px 0;
+}
+
+.details strong {
+    font-size: 1.3em;
+    font-weight: normal;
+    line-height: 2em;
+    display: block;
+    color: #800000;
+}
+
+.details a:link, .details a:visited{
+    color: #1083AE;
 }
 
 .details ul {
@@ -19,7 +40,7 @@
 #backButton {
     position: relative;
     left: -80px;
-    top: 25px;
+    top: 40px;
     height: 0;
 }
 
@@ -33,20 +54,47 @@
 
 .details-rrow {
     width: calc(40% - 40px);
+    /* min-width: 400px; */
 }
 
 .details-container div {
-    margin: 20px;
+    margin: 40px 20px;
 }
 
 .details-img {
     text-align: center;
-    height: 350px;
+    height: 400px;
+    width: 400px;
+    margin: 20px;
+    position: relative;
 }
 
-.details-img img {
-    width: 350px;
-    max-height: 350px;
+.details-img-slide {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
 }
+
+.details-img-control {
+    position: absolute;
+    top: 180px;
+    height: 50px;
+    width: 30px;
+    background-color: white;
+    opacity: 0.8;
+    border: 0;
+}
+
+.details-img-control-left {left: 10px;}
+.details-img-control-right {right: 10px;}
+#details-img-controls {
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+#details-img-controls:hover {opacity: 1;}
+
 
 
