--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -35,16 +35,24 @@
         </div>
 
         <div>
+            <strong>Update (May 13):</strong>
+            <ul>
+                <li>Bugs Chasing</li>
+                <li>User registration</li>
+                <li>Equipment Location and Map Display</li>
+                <li>Equipment Images Slideshow</li>
+            </ul>
+        </div>
+
+        <div>
             <strong>Todo: </strong>
             <ul>
-                <li>User registration (~5 hrs)</li>
-                <li>Finish editing function (map and image) (~5 hrs)</li>
-                <li>Adds custom support for category (~5 hrs)</li>
-                <li>UI details: colors, terms of use, help page... (make theme consistent with PME) (~5 hrs)</li>
-                <li>Mobile UI (~10 hrs)</li>
-                <li>Add feedback options (? hrs)</li>
-                <li>Refractor code base on Google's coding standard (~ 5hrs)</li>
-                <li>Write documentations (~5 hrs)</li>
+                <li>UI details: colors, terms of use, help page... (make theme consistent with PME)</li>
+                <li>Adds custom support for category</li>
+                <li>Mobile UI</li>
+                <li>Add feedback options</li>
+                <li>Refractor code base on Google's coding standard</li>
+                <li>Write documentations</li>
                 <li>...</li>
             </ul>
         </div>
