--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -16,7 +16,9 @@
 </head>
 <body>
 
+
 <section class="navbar">
+    <span></span>    
     <div><a href="/">Search</a></div>
     <div><a href="/about">About</a></div>
     {% if logged_in_user %}
