--- a/web/static/css/base.css
+++ b/web/static/css/base.css
@@ -1,11 +1,21 @@
 /* CSS Reset */
 
-
 .reset {
     border-width: 1px;
     padding: 0;
     margin: 0;
 }
+
+/* Define color variables */
+:root {
+    --main-bg-color: whitesmoke;
+    --hover-accent-color: #d8e5f2;
+    --link-color: #1083ae;
+    --border-color: #d6d6ce;
+    --heading-color: #c16622;
+    --contrast-bg-color: rgb(120,120,120);
+}
+
 
 ul {
     list-style: none;
@@ -39,7 +49,7 @@ p {
 }
 
 button {
-    border: 1px solid gray;
+    border: 1px solid var(--border-color);
     border-radius: 10px;
     font-size: 0.8em;
     height: 30px;
@@ -52,6 +62,6 @@ button:active {background-color: lightgray;}
 
 .divider {
     height: 30px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid var(--border-color);
 }
  
