--- a/web/static/css/dropdown.css
+++ b/web/static/css/dropdown.css
@@ -1,12 +1,16 @@
 /* ============== dropdown ============== */
 .catDropdown {
     position: absolute;
-    top: 150px;
+    top: 120px;
     left: 250px;
     max-width: 800px;
     display: none;
-    border-top: 1px solid gray;
-    background: lightgray;
+    border: 1px solid var(--border-color);
+    border-left: 0;
+    /* background: var(--main-bg-color); */
+    background: white;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    
 }
 
 .catDropdown__bwrapper{
