--- a/web/static/css/overlay.css
+++ b/web/static/css/overlay.css
@@ -12,7 +12,7 @@
 .overlay-detail {
     max-width: 300px;
     /* max-height: 500px; */
-    background: #ffffff;
+    background: var(--main-bg-color);
     opacity: 100%;
     margin: 80px auto;
     border-radius: 10px;
@@ -41,7 +41,7 @@
     width: 100%;
     height: 26px;
     padding-left: 5px;
-    border: 1px solid gray;
+    border: 1px solid var(--border-color);
     border-radius: 7px;
     font-size: 0.8em;
 }
