--- a/web/static/css/sidebar.css
+++ b/web/static/css/sidebar.css
@@ -1,12 +1,14 @@
 /* ============== sidebar ============== */
 
 .sidebar {
-    width: 250px;
+    width: 249px;
+    /* min-height: 650px; */
     overflow: scroll;
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    background: whitesmoke;
+    background: var(--main-bg-color);
+    border-right: 1px solid var(--border-color);
 }
 
 .sidebar-catNav__wrapper {
@@ -19,11 +21,13 @@
     width: 100%;
     height: 50px;
     display: flex;
-    background: #E8E8E8;
+    /* background: #E8E8E8; */
+    background: var(--main-bg-color);
 }
 
 .sidebar-catNav__cat--hover {
-    background: lightgray;
+    /* background: #E8E8E8; */
+    background: white;
 }
 
 .sidebar-catNav__text {
@@ -53,7 +57,7 @@
 .sidebar-refine-item {
     width: 150px;
     margin: 5px 0;
-    border: 1px solid gray;
+    border: 1px solid var(--border-color);
     border-radius: 5px;
     padding: 2px;
     font-size: small;
