--- a/web/static/css/top.css
+++ b/web/static/css/top.css
@@ -4,8 +4,8 @@
     width: 100%;
     height: 120px;
     display: flex;
-    background: whitesmoke;
-    border-bottom: 1px solid gray;
+    background: var(--main-bg-color);
+    border-bottom: 1px solid var(--border-color);
 }
 
 .top-logo__wrapper {
@@ -23,17 +23,12 @@
     margin: auto;
 }
 
-.top-search__wrapper {
-    flex-wrap: wrap;
-    min-width: 400px;
-}
-
 .top-searchBox {
     height: 28px;
-    max-width: 800px;
+    max-width: 500px;
     min-width: 290px;
-    margin: auto 0 auto auto;
-    border: 1px solid gray;
+    margin: auto 0 auto 50px;
+    border: 1px solid var(--border-color);
     border-radius: 7px 0 0 7px;
     flex-grow: 1;
     font-size: 1em;
@@ -44,7 +39,7 @@
     height: 50px;
     width: 90px;
     margin: auto auto auto 0;
-    border: 1px solid gray;
+    border: 1px solid var(--border-color);
     border-left-width: 0;
     border-radius: 0 7px 7px 0;
     font-size: 1em;
