updated about page

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -38,7 +38,7 @@
             <strong>Update (May 13):</strong>
             <ul>
                 <li>Bugs Chasing</li>
-                <li>User registration</li>
+                <li>UI Revamp</li>
                 <li>Equipment Location and Map Display</li>
                 <li>Equipment Images Slideshow</li>
             </ul>
@@ -47,12 +47,12 @@
         <div>
             <strong>Todo: </strong>
             <ul>
-                <li>UI details: colors, terms of use, help page... (make theme consistent with PME)</li>
+                <li>User Registration</li>
+                <li>Footer, terms of use, help page...</li>
                 <li>Adds custom support for category</li>
                 <li>Mobile UI</li>
                 <li>Add feedback options</li>
-                <li>Refractor code base on Google's coding standard</li>
-                <li>Write documentations</li>
+                <li>Documentations</li>
                 <li>...</li>
             </ul>
         </div>
