--- a/web/static/css/result.css
+++ b/web/static/css/result.css
@@ -23,18 +23,20 @@
     height: 245px;
     margin: 20px;
     border: 1px solid var(--border-color);
-    border-radius: 7px;
+    border-radius: 10px;
 }
 
 .result-block-thumbnail {
     text-align: center;
-    height: 160px;
-    margin: 20px 0 10px;
+    margin: 0 0 10px 0;
 }
 
 .result-block-thumbnail img {
-    max-width: 160px;
-    max-height: 160px;
+    /* width: 100%;*/
+    width: 100%;
+    max-height: 180px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
 }
 
 .result-block-name__wrapper {
