--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -67,7 +67,11 @@
 
 
 <section class="footer">
-    <div class="footer-placeholder">Footer</div>
+    <div>
+        <p>© <a href="https://www.uchicago.edu">The University of Chicago</a> | <a href="https://pme.uchicago.edu">Pritzker School of Molecular Engineering</a></p>
+        <p>5640 S. Ellis Avenue, Chicago, IL 60637 | +1 (772) 834-3548 | <a href="mailto:zqiu@uchicago.edu">administrator@pnf.uchicago.edu</a></p>
+    </div>
+    <img src="{{ url_for('static', filename='assets/logo_full_white.svg') }}">
 </section>
 
 </body>
