--- a/web/static/css/result.css
+++ b/web/static/css/result.css
@@ -51,12 +51,13 @@
 .result-pages__list {
     width: 100%;
     display: flex;
-    margin: 10px;
+    margin: 40px;
+    margin-left: 0; /* so that the numbers appear to be middle */
     justify-content: center;
+    font-size: 1.1em;
 }
 
-.result-pages__item {
-    display: inline;
-    min-width: 25px;
+.result-pages__item {    
+    margin: 0 20px;
     cursor: pointer;
 }
