--- a/web/static/css/top.css
+++ b/web/static/css/top.css
@@ -2,25 +2,17 @@
 
 .top {
     width: 100%;
-    height: 120px;
+    height: 140px;
     display: flex;
     background: var(--main-bg-color);
     border-bottom: 1px solid var(--border-color);
 }
 
-.top-logo__wrapper {
-    max-width: 400px;
-}
-
-.top-logo__placeholder {
-    font-size: 3em;
-    margin: auto;
-}
-
-.top-logo {
+.top-logo {max-width: 400px;}
+.top-logo a {margin: auto;}
+.top-logo img {
     max-width: 400px;
     max-height: 120px;
-    margin: auto;
 }
 
 .top-searchBox {
